make sure headings are aligned at start

--- a/assets/scss/components/_content.scss
+++ b/assets/scss/components/_content.scss
@@ -73,6 +73,7 @@
     font-size: 2.6rem;
     line-height: 1.4;
     font-weight: 300;
+    text-align: start;
     margin-bottom: 20px;
   }
   h2 {
@@ -81,6 +82,7 @@
     font-weight: 300;
     letter-spacing: -0.01em;
     font-family: $font-family-base;
+    text-align: start;
     margin-bottom: 20px;
   }
   h3 {
@@ -89,6 +91,7 @@
     font-weight: 300;
     letter-spacing: 0.06em;
     font-family: $font-family-base;
+    text-align: start;
     margin-bottom: 20px;
   }
   h4 {
@@ -96,6 +99,7 @@
     line-height: 1.4;
     font-weight: 300;
     font-family: $font-family-base;
+    text-align: start;
     margin-bottom: 20px;
   }
   h5 {
@@ -103,6 +107,7 @@
     line-height: 1.4;
     font-weight: 400;
     font-family: $font-family-base;
+    text-align: start;
     margin-bottom: 20px;
   }
   h6 {
@@ -110,6 +115,7 @@
     line-height: 1.4;
     font-weight: 300;
     font-family: $font-family-base;
+    text-align: start;
     margin-bottom: 20px;
   }
   blockquote {
